--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,11 @@
-<app-collegue [col]="objetCollegue"></app-collegue>
-<app-recherche-collegue-par-nom></app-recherche-collegue-par-nom>
+<div class="jumbotron jumbotron-fluid">
+    <div class="container js text-center">
+        <h1 class="display-4">Administration Collegue</h1>
+        <p class="lead">Bienvenue sur l'application qui trouve les collegues que vous cherchez</p>
+    </div>
+</div>
+
+<div class="d-flex flex-row justify-content-center m-3">
+    <app-recherche-collegue-par-nom></app-recherche-collegue-par-nom>
+    <app-collegue [col]="objetCollegue"></app-collegue>
+</div>
