--- a/src/app/recherche-par-nom/recherche-par-nom.component.html
+++ b/src/app/recherche-par-nom/recherche-par-nom.component.html
@@ -11,6 +11,6 @@
 <ng-template #elseBlock>
     <ul class="list-group">
         <li class="list-group-item d-flex justify-content-between align-items-center" *ngFor="let obj of maListe">
-            {{obj.matricule}}</li>
+            {{obj}}</li>
     </ul>
 </ng-template>
