--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
-<div class="jumbotron jumbotron-fluid">
+<div class="jumbotron jumbotron-fluid mb-4">
     <div class="container js text-center">
         <h1 class="display-2">Administration Collegue</h1>
         <p class="lead">Bienvenue sur l'application qui trouve les collegues que vous cherchez</p>
     </div>
 </div>
 
-<div *ngIf="authentificationIsOk; else elseBlock" class="container row mx-auto">
-    <div class="col">
+<div *ngIf="objetCollegue.matricule!=undefined; else elseBlock" class="container row mx-auto ">
+    <div class="col mb-4">
         <app-recherche-collegue-par-nom></app-recherche-collegue-par-nom>
     </div>
     <div class="col">
