--- a/src/app/recherche-par-nom/recherche-par-nom.component.html
+++ b/src/app/recherche-par-nom/recherche-par-nom.component.html
@@ -1,5 +1,5 @@
 <div class="input-group">
-    <input type="text" class="form-control" placeholder="nom du collegue" aria-label="nom du collegue"
+    <input type="text" class="rounded-pill form-control" placeholder="nom du collegue" aria-label="nom du collegue"
         aria-describedby="button-addon3" #nom>
     <div class="input-group-append">
         <button (click)="rechercherCollegueParNom(nom.value)" class="btn btn-outline-secondary" type="button"
@@ -10,7 +10,8 @@
 <div *ngIf="rechercheIsFinie; else elseBlock"></div>
 <ng-template #elseBlock>
     <ul class="list-group">
-        <li class="list-group-item d-flex justify-content-between align-items-center" *ngFor="let obj of maListe">
+        <li class="list-group-item d-flex justify-content-between align-items-center"
+            (click)="rechercherCollegueParMatricule(obj)" *ngFor="let obj of maListe">
             {{obj}}</li>
     </ul>
 </ng-template>
