--- a/src/app/collegue/collegue.component.html
+++ b/src/app/collegue/collegue.component.html
@@ -5,9 +5,7 @@
         </div>
         <div class="col-8">
             <div class="card-body">
-
                 <h5 class="card-title"><span>{{col.nom | uppercase}} {{col.prenom | uppercase}}</span></h5>
-
                 <div class="card-text">
                     <span class="text-muted">Matricule : </span>
                     <input type="text" class="rounded-pill form-control-plaintext" id="staticMatricule"
@@ -15,108 +13,67 @@
                 </div>
                 <div class="card-text">
                     <span class="text-muted">Nom : </span>
-                    <input type="text" [ngClass]="{'mod':isCreate}" class="rounded-pill form-control-plaintext"
-                        id="staticNom" value="{{col.nom | uppercase}}" required [readonly]="isReadonly">
+                    <input type="text" [ngClass]="{'mod':isCreationEnCours}" class="rounded-pill form-control-plaintext"
+                        #nom [(ngModel)]="col.nom" id="staticNom" value="{{col.nom | uppercase}}" required
+                        [readonly]="!isCreationEnCours">
                 </div>
                 <div class="card-text">
                     <span class="text-muted">Prénom : </span>
-                    <input type="text" [ngClass]="{'mod':isCreate}" class="rounded-pill form-control-plaintext"
-                        id="staticPrenom" value="{{col.prenom}}" required [readonly]="isReadonly">
+                    <input type="text" [ngClass]="{'mod':isCreationEnCours}" class="rounded-pill form-control-plaintext"
+                        #prenom [(ngModel)]="col.prenom" id="staticPrenom" value="{{col.prenom}}" required
+                        [readonly]="!isCreationEnCours">
                 </div>
                 <div class="card-text">
                     <span class="text-muted">Date de naissance : </span>
-                    <input type="text" [ngClass]="{'mod':isCreate}" class="rounded-pill form-control-plaintext"
-                        id="staticDdn" value="{{col.ddn | date}}" required [readonly]="isReadonly">
+                    <input (click)="d.toggle()" type="text" [ngClass]="{'mod':isCreationEnCours}"
+                        class="rounded-pill form-control-plaintext" #ddn [(ngModel)]="col.ddn" id="staticDdn"
+                        value="{{col.ddn | date}}" placeholder="{{col.ddn | date}}" name="dp" ngbDatepicker
+                        #d="ngbDatepicker" required [readonly]="!isCreationEnCours" [disabled]="!isCreationEnCours">
                 </div>
+
+
+
                 <div class="card-text">
                     <span class="text-muted">Email : </span>
-                    <input type="text" [ngClass]="{'mod':!isReadonly}" class="rounded-pill form-control-plaintext"
-                        id="staticEmail" value="{{col.email}}" required [readonly]="isReadonly">
+                    <input type="text" [ngClass]="{'mod':isModificationEnCours||isCreationEnCours}"
+                        [(ngModel)]="col.email" class="rounded-pill form-control-plaintext" id="staticEmail" required
+                        [readonly]="!isCreationEnCours&&!isModificationEnCours">
                 </div>
                 <div class="card-text">
                     <span class="text-muted">Photo Url : </span>
-                    <input type="text" [ngClass]="{'mod':!isReadonly}" class="rounded-pill form-control-plaintext"
-                        id="staticPhoto" value="{{col.photoUrl}}" required [readonly]="isReadonly">
+                    <input type="text" [ngClass]="{'mod':isModificationEnCours||isCreationEnCours}" #photo
+                        [(ngModel)]="col.photoUrl" class="rounded-pill form-control-plaintext" id="staticPhoto" required
+                        [readonly]="!isCreationEnCours&&!isModificationEnCours">
                 </div>
-
-
-
-                <!-- <ng-template #elseBlock>
-                    <div class="input-group">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text" id="basic-addon1">@</span>
-                        </div>
-                        <input type="text" class="form-control" placeholder="votre email" aria-label="email"
-                            aria-describedby="basic-addon1">
-                    </div>
-                    <div class="input-group">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text" id="basic-addon2">http://</span>
-                        </div>
-                        <input type="text" class="form-control" placeholder="votre photo" aria-label="photo"
-                            aria-describedby="basic-addon2">
-                    </div>
-                </ng-template> -->
-
-                <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
             </div>
         </div>
     </div>
 </div>
 
-<!-- 
-<div class="row">
-    <div class="col"><img class="img-fluid rounded img-thumbnail" src="{{col.photoUrl}}" alt=""></div>
-    <div class="col d-flex flex-column ">
-        <div class="">Matricule : <span>{{col.matricule}}</span></div>
-        <div class="">Nom : <span>{{col.nom | uppercase}}</span></div>
-        <div class="">Prenom : <span>{{col.prenom}}</span></div>
-        <div class="">Date de naissance : <span>{{col.dateDeNaissance | date}}</span></div>
-        <div *ngIf="modifierIsVisible; else elseBlock">
-            <div>Email : <span>{{col.email}}</span></div>
-            <div>Photo Url : <span>{{col.photoUrl}}</span></div>
-        </div>
-        <ng-template #elseBlock>
-            <div class="input-group">
-                <div class="input-group-prepend">
-                    <span class="input-group-text" id="basic-addon1">@</span>
-                </div>
-                <input type="text" class="form-control" placeholder="votre email" aria-label="email"
-                    aria-describedby="basic-addon1">
-            </div>
-            <div class="input-group">
-                <div class="input-group-prepend">
-                    <span class="input-group-text" id="basic-addon2">http://</span>
-                </div>
-                <input type="text" class="form-control" placeholder="votre photo" aria-label="photo"
-                    aria-describedby="basic-addon2">
-            </div>
-        </ng-template>
 
-
-
-    </div>
-
-
-</div> -->
 <div class="row align-items-end ">
 
-    <ng-container *ngIf="isReadonly"><button (click)="creerCollegue()" type="button"
-            class="btn btn-lg btn-outline-primary">nouveau</button></ng-container>
-
-    <ng-container *ngIf="isReadonly"> <button (click)="modifierCollegue()" type="button"
-            class="btn btn-lg btn-outline-secondary">modifier</button></ng-container>
+    <ng-container *ngIf="!isModificationEnCours&&!isCreationEnCours"><button (click)="creerCollegue()" type="button"
+            class="btn btn-lg btn-outline-primary rounded-pill" [disabled]="boutonIsDisabled">nouveau</button>
+        <button (click)="modifierCollegue()" type="button" class="btn btn-lg btn-outline-secondary rounded-pill"
+            [disabled]="boutonIsDisabled">modifier</button>
+    </ng-container>
 
     <ng-container *ngIf="isCreationEnCours"><button (click)="validerCreationCollegue()" type="button"
-            class="btn btn-lg btn-outline-primary">valider c</button></ng-container>
-    <ng-container *ngIf="isCreationEnCours"><button (click)="annulerEtats()" type="button"
-            class="btn btn-lg btn-outline-danger">annuler</button></ng-container>
-
+            class="btn btn-lg btn-outline-primary rounded-pill" [disabled]="boutonIsDisabled">
+            <ng-container *ngIf="boutonIsDisabled"><span class="spinner-border spinner-border-sm" role="status"
+                    aria-hidden="true"></span></ng-container>valider
+        </button>
+        <button (click)="annulerEtats()" type="button" class="btn btn-lg btn-outline-danger rounded-pill"
+            [disabled]="boutonIsDisabled">annuler</button>
+    </ng-container>
 
     <ng-container *ngIf="isModificationEnCours"><button (click)="validerModificationCollegue()" type="button"
-            class="btn btn-lg btn-outline-primary">valider m</button></ng-container>
-    <ng-container *ngIf="isModificationEnCours"><button (click)="annulerEtats()" type="button"
-            class="btn btn-lg btn-outline-danger">annuler</button></ng-container>
-
+            class="btn btn-lg btn-outline-primary rounded-pill">
+            <ng-container *ngIf="boutonIsDisabled"><span class="spinner-border spinner-border-sm" role="status"
+                    aria-hidden="true"></span></ng-container>valider
+        </button>
+        <button (click)="annulerEtats()" type="button"
+            class="btn btn-lg btn-outline-danger rounded-pill">annuler</button></ng-container>
 
 </div>
