--- a/src/app/recherche-par-nom/recherche-par-nom.component.html
+++ b/src/app/recherche-par-nom/recherche-par-nom.component.html
@@ -1,11 +1,12 @@
 <div class="input-group">
-    <input type="text" class="rounded-pill form-control" placeholder="nom du collegue" aria-label="nom du collegue"
+    <input type="text" class="rounded-pill form-control-plaintext border border-white border" placeholder="nom du collegue" aria-label="nom du collegue"
         aria-describedby="button-addon3" #nom>
     <div class="input-group-append">
-        <button (click)="rechercherCollegueParNom(nom.value)" class="btn btn-outline-secondary rounded-pill"
-            type="button" id="button-addon3"><i data-feather="search"></i></button>
+        <button (click)="rechercherCollegueParNom(nom.value)" class="btn btn-outline-secondary rounded-pill form-control-plaintext"
+            type="button" id="button-addon3">
+            <i-feather name="search">rechercher</i-feather>
+        </button>
     </div>
-
 </div>
 
 <div *ngIf="rechercheIsFinie; else elseBlock"></div>
