modification des subscribe des subject

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -21,6 +21,7 @@
         </ul>
         <div class="">
             <i-feather name="user"></i-feather>
+            <span >{{col.nom | uppercase}} {{col.prenom | uppercase}}</span>
         </div>
     </div>
 </nav>
