--- a/src/app/authentification/authentification.component.html
+++ b/src/app/authentification/authentification.component.html
@@ -1,4 +1,4 @@
-<div class="container row mx-auto">
+<div class="container row mx-auto m-5">
     <form class="form-inline mx-auto">
         <div class="form-group mx-sm-3 mb-2">
             <label for="staticEmail2" class="sr-only">Login</label>
